--- a/OEOW/localisation/00_ui_triggers.csv
+++ b/OEOW/localisation/00_ui_triggers.csv
@@ -1596,7 +1596,110 @@ HEALTH_TRAITS_TRIGGER;Has $COMPARISON$ $VALUE|Y$ health traits;Nombre de traits 
 HEALTH_TRIGGER;Health is $COMPARISON$ $VALUE|Y$;La santé est $COMPARISON$ $VALUE|Y$;Gesundheit ist $COMPARISON$ $VALUE|Y$;;Salud es $COMPARISON$ $VALUE|Y$;;;;;;;;;x
 NUM_HOLDING_DIFF_TRIGGER;$COMPARISON|U$ $VALUE|Y$§! §Y$FIRST_TYPE$s§! in $FIRST_LOCATION$ per §Y$SECOND_TYPE$s§! in $SECOND_LOCATION$;Nombre de §Y$FIRST_TYPE$s§! en $FIRST_LOCATION$ par §Y$SECOND_TYPE$s§! en $SECOND_LOCATION$ $COMPARISON$ $VALUE|Y$;$COMPARISON$ $VALUE|Y$§! §Y$FIRST_TYPE$s§! in $FIRST_LOCATION$ pro §Y$SECOND_TYPE$s§! in $SECOND_LOCATION$;;$COMPARISON$ $VALUE|Y$§! §Y$FIRST_TYPE$s§! en $FIRST_LOCATION$ por §Y$SECOND_TYPE$s§! en $SECOND_LOCATION$;;;;;;;;;x
 HOLY_SITES_TRIGGER;Controls $COMPARISON$ $VALUE|Y$ holy sites;Contrôle $COMPARISON$ $VALUE|Y$ lieux saints;Kontrolliert $COMPARISON$ $VALUE|Y$ heilige Stätte;;Controla $COMPARISON$ $VALUE|Y$ lugares sagrados;;;;;;;;;x
-HOSPITAL_LEVEL_TRIGGER;Hospital Level is $COMPARISON$ $VALUE|Y$;Niveau de l'hôpital $COMPARISON$ $VALUE|Y$;Hospital-Stufe ist $COMPARISON$ $VALUE|Y$;;Nivel de hospital es $COMPARISON$ $VALUE|Y$;;;;;;;;;x
+HOSPITAL_LEVEL_TRIGGER;Infrastructure Level is $COMPARISON$ $VALUE|Y$;Niveau de l'hôpital $COMPARISON$ $VALUE|Y$;Hospital-Stufe ist $COMPARISON$ $VALUE|Y$;;Nivel de hospital es $COMPARISON$ $VALUE|Y$;;;;;;;;;x
+
+mil_train_laws;Levies Control;;;;;;;;;;;;;x
+mil_train_laws_desc;These laws regulate the amount of combat training and discipline required from men who enlist or are pressed into the realm's levies. With more training, your warriors will be more confident and effective on the field of battle, but more time will be necessary to replace the losses.;;;;;;;;;;;;;x
+mil_train_0;Free Campaigners;;;;;;;;;;;;;x
+mil_train_0_desc;Your levies consist of free individuals, local farmers and commoners who are given arms and called to war when necessary. They receive no direct training, and no strict discipline is required from them.;;;;;;;;;;;;;x
+mil_train_0_option;None;;;;;;;;;;;;;x
+mil_train_1;Trained Levies;;;;;;;;;;;;;x
+mil_train_1_desc;When men enlist or are pressed into your levies, they recieve basic drill instruction and weapons training at the hands of veterans.;;;;;;;;;;;;;x
+mil_train_1_option;Low;;;;;;;;;;;;;x
+mil_train_2;Professional Levies;;;;;;;;;;;;;x
+mil_train_2_desc;Your levies consist of competent, well-trained professionals, drilled and honed by veterans and skilled commanders. Strict discipline is required from all armed men, even from town guards and watch sentries. Peasant militia levies spend one day every week training under the guidance of experienced warriors.;;;;;;;;;;;;;x
+mil_train_2_option;High;;;;;;;;;;;;;x
+common_land_laws;Common Land Privileges;;;;;;;;;;;;;x
+common_land_laws_desc;In feudal and beuracratic societies there is often land held in common possession by the state rather than any perticular group, in these states the privilege to directly manage such lands would be handed out to certain classes in society, often to the detriment of others.;;;;;;;;;;;;;x
+common_land_laws_0;Free Common Lands;;;;;;;;;;;;;x
+common_land_laws_0_desc;The land is Free to be used by all those residing within the state, managed by the monarch and his court.;;;;;;;;;;;;;x
+common_land_laws_0_option;Free;;;;;;;;;;;;;x
+common_land_laws_1;Burgher Privilege;;;;;;;;;;;;;x
+common_land_laws_1_desc;The right to manage the common lands has been granted to the Burghers, they pay increased tax for this.;;;;;;;;;;;;;x
+common_land_laws_1_option;Burgher;;;;;;;;;;;;;x
+common_land_laws_2;Noble Privilege;;;;;;;;;;;;;x
+common_land_laws_2_desc;The right to manage the common lands has been granted to the Nobles, they pay increased tax for this.;;;;;;;;;;;;;x
+common_land_laws_2_option;Noble;;;;;;;;;;;;;x
+common_land_laws_3;Clergy Privilege;;;;;;;;;;;;;x
+common_land_laws_3_desc;The right to manage the common lands has been granted to the Clergy, they pay increased tax for this.;;;;;;;;;;;;;x
+common_land_laws_3_option;Clergy;;;;;;;;;;;;;x
+
+forestry_laws;Forestry Privileges;;;;;;;;;;;;;x
+forestry_laws_desc;In feudal and beuracratic societies forests which are not privately owned are typically under the control of the monarch, in these states the privilege to directly manage such lands for lumber and hunting would be handed out to certain classes in society, often to the detriment of others.;;;;;;;;;;;;;x
+forestry_laws_0;Free Forests;;;;;;;;;;;;;x
+forestry_laws_0_desc;The Forests are Free to be used by all those residing within the state, managed by the monarch and his court.;;;;;;;;;;;;;x
+forestry_laws_0_option;Free;;;;;;;;;;;;;x
+forestry_laws_1;Burgher Privilege;;;;;;;;;;;;;x
+forestry_laws_1_desc;The Right to manage the Forests has been granted to the Burghers, they pay increased tax for this.;;;;;;;;;;;;;x
+forestry_laws_1_option;Burgher;;;;;;;;;;;;;x
+forestry_laws_2;Noble Privilege;;;;;;;;;;;;;x
+forestry_laws_2_desc;The Right to manage the Forests has been granted to the Nobles, they pay increased tax for this.;;;;;;;;;;;;;x
+forestry_laws_2_option;Noble;;;;;;;;;;;;;x
+forestry_laws_3;Clergy Privilege;;;;;;;;;;;;;x
+forestry_laws_3_desc;The Right to manage the Forests has been granted to the Clergy, they pay increased tax for this.;;;;;;;;;;;;;x
+forestry_laws_3_option;Clergy;;;;;;;;;;;;;x
+########
+
+currency_laws;Currency in Mint;;;;;;;;;;;;;x
+currency_laws_desc;Not all states in this time period actively mint their own coinage but to do so can be very prestigious for the Lord in question.;;;;;;;;;;;;;x
+currency_laws_0;No Minting;;;;;;;;;;;;;x
+currency_laws_0_desc;The economy of this state gets by on a mixture of other states currencies and the barter/favour system.;;;;;;;;;;;;;x
+currency_laws_0_option;None;;;;;;;;;;;;;x
+currency_laws_1;§FCopper Currency§!¤;;;;;;;;;;;;;x
+currency_laws_1_desc;This state mints Copper currency to spread the prestige of its lord and be used in economic activities.;;;;;;;;;;;;;x
+currency_laws_1_option;§FCopper§!¤;;;;;;;;;;;;;x
+currency_laws_2;§gSilver Currency§!¤;;;;;;;;;;;;;x
+currency_laws_2_desc;This state mints Silver currency to spread the prestige of its lord and be used in economic activities;;;;;;;;;;;;;x
+currency_laws_2_option;§gSilver§!¤;;;;;;;;;;;;;x
+currency_laws_3;§MGold Currency§!¤;;;;;;;;;;;;;x
+currency_laws_3_desc;This state mints Gold currency to spread the prestige of its lord and be used in economic activities;;;;;;;;;;;;;x
+currency_laws_3_option;§MGold§!¤;;;;;;;;;;;;;x
+########
+tolerance_laws;Tolerance;;;;;;;;;;;;;x
+tolerance_laws_desc;The level of tolerance of other religions and cultures within medieval kingdoms varied based on the will of the Monarch and his ruling council.;;;;;;;;;;;;;x
+tolerance_laws_0;Intolerant;;;;;;;;;;;;;x
+tolerance_laws_0_desc;This state does not tolerate other faiths and cultures;;;;;;;;;;;;;x
+tolerance_laws_0_option;Intolerant;;;;;;;;;;;;;x
+TOOLTIP_tolerance_laws_0;This will increase the rate of culture and religion conversion;;;;;;;;;;;;;x
+tolerance_laws_1;No Laws;;;;;;;;;;;;;x
+tolerance_laws_1_desc;There are no laws present regarding tolerance;;;;;;;;;;;;;x
+tolerance_laws_1_option;No Laws;;;;;;;;;;;;;x
+tolerance_laws_2;Tolerant;;;;;;;;;;;;;x
+tolerance_laws_2_desc;This state does tolerate other faiths and cultures to some extent;;;;;;;;;;;;;x
+tolerance_laws_2_option;Tolerant;;;;;;;;;;;;;x
+TOOLTIP_tolerance_laws_2;This will decrease the rate of culture and religion conversion;;;;;;;;;;;;;x
+########
+judiciary_laws;Judiciary Privileges;;;;;;;;;;;;;x
+judiciary_laws_desc;In feudal and beuracratic societies the right to act as judges and hold courts of law would often be a privilege granted out to the classes.;;;;;;;;;;;;;x
+judiciary_laws_0;Royal Courts;;;;;;;;;;;;;x
+judiciary_laws_0_desc;Judges in this nation must be selected by the monarch themselves or by a subordinate rather than being an inherent part of another title.;;;;;;;;;;;;;x
+judiciary_laws_0_option;Royal;;;;;;;;;;;;;x
+judiciary_laws_1;Burgher Privilege;;;;;;;;;;;;;x
+judiciary_laws_1_desc;The Right to act as judges has been granted to the Burghers, they pay increased tax for this.;;;;;;;;;;;;;x
+judiciary_laws_1_option;Burgher;;;;;;;;;;;;;x
+judiciary_laws_2;Noble Privilege;;;;;;;;;;;;;x
+judiciary_laws_2_desc;The Right to act as judges has been granted to the Nobles, they pay increased tax for this.;;;;;;;;;;;;;x
+judiciary_laws_2_option;Noble;;;;;;;;;;;;;x
+judiciary_laws_3;Clergy Privilege;;;;;;;;;;;;;x
+judiciary_laws_3_desc;The Right to act as judges has been granted to the Clergy, they pay increased tax for this.;;;;;;;;;;;;;x
+judiciary_laws_3_option;Clergy;;;;;;;;;;;;;x
+
+RULE_NON_DYNASTIC_SUCCESSION;Non-Dynastic Succession;;;;;;;;;;;;x
+RULE_NON_DYNASTIC_SUCCESSION_LIMITED_DESC;Only select governments (such as Oligarchic Republics) will allow for non-dynastic succession, allowing for infinite play - as long as there are possible heirs.;;;;;;;;;;;;x
+RULE_NON_DYNASTIC_SUCCESSION_ON_DESC;Non-dynastic succession will be always on, allowing for infinite play - as long as there are possible heirs.;;;;;;;;;;;;x
+RULE_NON_DYNASTIC_SUCCESSION_OFF_DESC;The game will end when you die without a dynastic heir. Vanilla behavior.;;;;;;;;;;;;x
+byzantine_elective_2;Dynastic Meritocratic;;;;;;x
+succ_dynastic_meritocratic_desc;The Imperial Council and the Commanders of the Imperial Army can influence the selection of the new Emperor from the Imperial family. Unlike Feudal Electors, each member of the Imperial Court has a different voting strength, based on his prestige, minor titles and attributes, making some electors more influential than others. The Emperor wields the most influence, unless disfigured, deformed or underage. Close relatives of the ruling Emperor are all viable candidates for succession.;;;;;;x
+succ_dynastic_meritocratic;Dynastic Meritocratic;;;;;;x
+succ_muslim_elective;Islamic Elective;;;;;;;;;x,,,,,,,,;;;;
+succ_muslim_elective_desc;The ruler and each lower rank vassal (i.e. the dukes if the ruler is a king) can nominate a successor from among themselves and legitimate children and siblings of the ruler. Dukes are valid electors in both kingdoms and empires. Elective Succession is very popular with the vassals, but they will not approve if their liege personally holds too many elector titles. Women can never inherit.;;;;;;;;;x,,,,,,,,;;;;
+succ_phonocratic_elective;Phonocratic Elective;;;;;;;;;x,,,,,,,,;;;;
+succ_phonocratic_elective_desc;The ruler and pious realm vassal (including vassals of vassals) can nominate a successor from among themselves and legitimate children and siblings of the ruler. Elective Succession is very popular with the vassals, but they will not approve if their liege personally holds too many elector titles. Value is based on the amount of people sacrificed.;;;;;;;;;x,,,,,,,,;;;;
+succ_salafi_elective;Islamic Commander Elective;;;;;;;;;x,,,,,,,,;;;;
+succ_salafi_elective_desc;The Commanders of the ghazwa can influence the selection of the new ruler. Unlike a regular elective monarchy, ghazwa electors choose a successor based on physical strength and military skill. Commanders can only elect a new ruler from among their peers. Women can never inherit.;;;;;;;;;x,,,,,,,,;;;;
+
+
+
 INFAMY_TRIGGER;Has a Threat level $COMPARISON$ §Y$VALUE$%§!;Niveau de menace $COMPARISON$ §Y$VALUE$%§!;Hat Bedrohungsstufe von $COMPARISON$ §Y$VALUE$%§!;;Tiene un nivel de amenaza de $COMPARISON$ §Y$VALUE$%§!;;;;;;;;;x
 INTRIGUE_TRIGGER;Has §YIntrigue§! $COMPARISON$ $VALUE|Y$;A une §Yintrigue§! $COMPARISON$ $VALUE|Y$;§YIntrige§! $COMPARISON$ $VALUE|Y$;;Tiene $COMPARISON$ $VALUE|Y$ §YIntriga§!;;;;;;;;;x
 LEADERSHIP_TRAITS_TRIGGER;Has $COMPARISON$ $VALUE|Y$ leadership traits;Nombre de traits de commandement $COMPARISON$ $VALUE|Y$;Hat $COMPARISON$ $VALUE|Y$ Anführer-Eigenschaften;;Tiene $COMPARISON$ $VALUE|Y$ rasgos de liderazgo;;;;;;;;;x
