Cumbric, Walas, Cornish

--- a/OEOW/localisation/00_cultures.csv
+++ b/OEOW/localisation/00_cultures.csv
@@ -77,6 +77,10 @@ scottish;Scottish;écossaise;Schottisch;;Escocesa;;;;;;;;;x
 pictish;Pictish;picte;Piktisch;;Picto;;;;;;;;;x
 breton;Breton;bretonne;Bretonisch;;Bretona;;;;;;;;;x
 welsh;Welsh;galloise;Walisisch;;Galesa;;;;;;;;;x
+walas;Walas;;;;;;;;;x
+cumbric;Cumbric;;;;;;;;;x
+cornish;Cornish;;;;;;;;;x
+
 
 
 
