--- a/OEOW/localisation/00_casus_belli.csv
+++ b/OEOW/localisation/00_casus_belli.csv
@@ -27,6 +27,8 @@ CB_NAME_DESTABILIZATION_CHINA;Shatter Realm;Démembrer le pays;Reich zerschlagen;
 CB_NAME_DISMANTLE_PRETENDER_CHINA;Dismantle Pretender;Démanteler le prétendant;Anwärter zerschlagen;;Eliminar pretendiente;;;;;;;;x;
 CB_NAME_DISPUTE;Dispute [Title.GetBaseName];Contester [Title.GetBaseName];[Title.GetBaseName] anfechten;;Disputa [Title.GetBaseName];;;;;;;;;x
 CB_NAME_DUCALCOUNTYCONQUEST;Ducal Conquest of [Title.GetBaseName];Conquête ducale de [Title.GetBaseName];Herzogliche Eroberung von [Title.GetBaseName];;Conquista ducal de [Title.GetBaseName];;;;;;;;;x
+famine;Famine;;;;;;;;;x
+FAMINE_INFO;A non-human disease is rampaging through this province destroying a foodstuff vital to the lives of the peasantry, though the nobility remains largely unaffected in terms of food;;;;;;;;;x
 CB_NAME_DUCHY_ADVENTURE;Adventurer Conquest of [Title.GetBaseName];Conquête de [Title.GetBaseName] par un aventurier;Abenteurer-Eroberung von [Title.GetBaseName];;Conquista Aventurera de [Title.GetBaseName];;;;;;;;;x
 CB_NAME_EMBARGO;Embargo;Embargo;Embargo;;Embargo;;;;;;;;;x
 CB_NAME_EXCOMMUNICATED_RULER;Excommunicated ruler;Seigneur excommunié;Exkommunizierter Herrscher;;Gobernante excomulgado;;;;;;;;;x
