--- a/OEOW/localisation/00_artifacts.csv
+++ b/OEOW/localisation/00_artifacts.csv
@@ -11,6 +11,8 @@ weapon;Weapon;Arme;Waffe;;Arma;;;;;;;;;x
 wrist;Wrist;Poignet;Handgelenk;;Muñeca;;;;;;;;;x
 
 # Artifacts
+cleanupDesc9186;The death of the Emperor during this time of widespread death amongst the people has led to the dissolution of centralised power, a warring states period has begun.;;;;;;;;;;;;;x
+cleanup9186OPTA;NOOOOOOOOOOOOOOOOOO;;;;;;;;;;;;;x
 a_book_of_vegetables;A Book of Vegetables;Un livre sur les légumes;Mein Gemüse und ich;;Un libro de verduras;;;;;;;;;x
 a_book_of_vegetables_desc;Few know about [From.OriginalOwner.GetTitledFirstName]'s love for vegetables. What a conversation starter!;Peu connaissent l'amour [From.OriginalOwner.Get_du_TitledFirstName] pour les légumes. Quel début de conversation !;Nur wenige wissen von [From.OriginalOwner.GetTitledFirstName] und [From.OriginalOwner.GetHerHis]er Liebe zum Gemüse. Was für ein Gesprächseinstieg!;;Pocos conocen el amor que [From.OriginalOwner.GetTitledFirstName] sentía por las verduras. ¡Qué modo de empezar una conversación!;;;;;;;;;x
 a_history_of_armor;A History of Armor;Une histoire d'armures;Die Rüstung;;Historia de la armadura;;;;;;;;;x
